@@ -1,6 +1,6 @@
 package hexlet.code;
 
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -11,69 +11,56 @@ import java.nio.file.Paths;
 import static hexlet.code.Differ.generate;
 
 class AppTest {
-    private String absolutePath;
-    @BeforeEach
-    void beforeEach() {
-        Path path = Paths.get("src", "test", "resources");
-        absolutePath = path.toAbsolutePath().toString();
+
+    private static String jsonNested1;
+    private static String jsonNested2;
+    private static String yamlNested1;
+    private static String yamlNested2;
+    private static Path stylishTest;
+    private static Path plainTest;
+    private static String plainFormat;
+
+    public static Path getAbsolutPathToFile(String file) {
+        Path path = Paths.get("src", "test", "resources", file);
+        return path.toAbsolutePath();
+    }
+
+    @BeforeAll
+    static void beforeAll() {
+        jsonNested1 = getAbsolutPathToFile("jsonNested1.json").toString();
+        jsonNested2 = getAbsolutPathToFile("jsonNested2.json").toString();
+        yamlNested1 = getAbsolutPathToFile("yamlNested1.yml").toString();
+        yamlNested2 = getAbsolutPathToFile("yamlNested2.yml").toString();
+        stylishTest = getAbsolutPathToFile("stylishTest.txt");
+        plainTest = getAbsolutPathToFile("plainTest.txt");
+        plainFormat = "plain";
     }
 
     @Test
     public void testGenerateJsonNestedStylish() throws Exception {
-        String filePath1 = absolutePath + "/jsonNested1.json";
-        String filePath2 = absolutePath + "/jsonNested2.json";
-        String stylishTest = absolutePath + "/stylishTest.txt";
-        String actual = generate(filePath1, filePath2);
-        String expected = new String(Files.readAllBytes(Paths.get(stylishTest)));
+        String actual = generate(jsonNested1, jsonNested2);
+        String expected = Files.readString(stylishTest);
         assertThat(actual).isEqualTo(expected);
     }
 
     @Test
     public void testGenerateYamlNestedStylish() throws Exception {
-        String filePath1 = absolutePath + "/yamlNested1.yml";
-        String filePath2 = absolutePath + "/yamlNested2.yml";
-        String stylishTest = absolutePath + "/stylishTest.txt";
-        String actual = generate(filePath1, filePath2);
-        String expected = new String(Files.readAllBytes(Paths.get(stylishTest)));
+        String actual = generate(yamlNested1, yamlNested2);
+        String expected = Files.readString(stylishTest);
         assertThat(actual).isEqualTo(expected);
     }
 
     @Test
     public void testGenerateJsonNestedPlain() throws Exception {
-        String filePath1 = absolutePath + "/jsonNested1.json";
-        String filePath2 = absolutePath + "/jsonNested2.json";
-        String plainTest = absolutePath + "/plainTest.txt";
-        String format = "plain";
-        String actual = generate(filePath1, filePath2, format);
-        String expected = new String(Files.readAllBytes(Paths.get(plainTest)));
+        String actual = generate(jsonNested1, jsonNested2, plainFormat);
+        String expected = Files.readString(plainTest);
         assertThat(actual).isEqualTo(expected);
     }
 
     @Test
     public void testGenerateYamlNestedPlain() throws Exception {
-        String filePath1 = absolutePath + "/yamlNested1.yml";
-        String filePath2 = absolutePath + "/yamlNested2.yml";
-        String plainTest = absolutePath + "/plainTest.txt";
-        String format = "plain";
-        String actual = generate(filePath1, filePath2, format);
-        String expected = new String(Files.readAllBytes(Paths.get(plainTest)));
-        assertThat(actual).isEqualTo(expected);
-    }
-
-    @Test
-    public void testGenerateFormatJson() throws Exception {
-        String filePath1 = absolutePath + "/file1.json";
-        String filePath2 = absolutePath + "/file2.json";
-        String format = "json";
-        String actual = generate(filePath1, filePath2, format);
-        String expected = """
-                {
-                  "follow" : false,
-                  "host" : "hexlet.io",
-                  "proxy" : "123.234.53.22",
-                  "timeout" : [ 50, 20 ],
-                  "verbose" : true
-                }""";
+        String actual = generate(yamlNested1, yamlNested2, plainFormat);
+        String expected = Files.readString(plainTest);
         assertThat(actual).isEqualTo(expected);
     }
 }
